fix cursor jumping, change button style

--- a/styles.css
+++ b/styles.css
@@ -34,22 +34,24 @@ main {
 }
 
 button {
-  background: rgba(255, 255, 255, 0.2);
+  background: none;
   border: 0;
   color: rgba(255, 255, 255, 0.5); 
-  padding: 5px 20px;
+  padding: 0 20px;
   border-radius: 5px;
+  font-family: 'Roboto Mono', monospace;
+  font-size: 16px;
 }
 
 .word{
   display: inline-block;
   font-family: 'Roboto Mono', monospace;
-  margin: 0 5px;
+  margin: 6px 5px;
+  font-size: 24px;
 }
 
 #game {
-  line-height: 35px;
-  height: 105px;
+  height: 144px;
   overflow: hidden;
   position: relative;
 }
@@ -102,7 +104,7 @@ button {
   background-color: var(--primaryColor);
   position: fixed;
   top: 198px;
-  left: 18px;
+  left: 50px;
   animation: blink 1s infinite;
 }
 
